k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cpms-starter
  namespace: phevnix-v2
spec:
  type: ClusterIP
  selector:
    app: cpms-starter
  ports:
    - port: 80
      targetPort: 8080
